@@ -15,18 +15,23 @@ package org.flowable.validation.validator.impl;
 import java.util.HashMap;
 import java.util.List;
 
+import org.apache.commons.lang3.StringUtils;
 import org.flowable.bpmn.model.BoundaryEvent;
 import org.flowable.bpmn.model.BpmnModel;
 import org.flowable.bpmn.model.CancelEventDefinition;
 import org.flowable.bpmn.model.CompensateEventDefinition;
+import org.flowable.bpmn.model.ConditionalEventDefinition;
 import org.flowable.bpmn.model.ErrorEventDefinition;
+import org.flowable.bpmn.model.EscalationEventDefinition;
 import org.flowable.bpmn.model.EventDefinition;
+import org.flowable.bpmn.model.ExtensionElement;
 import org.flowable.bpmn.model.FlowElement;
 import org.flowable.bpmn.model.MessageEventDefinition;
 import org.flowable.bpmn.model.Process;
 import org.flowable.bpmn.model.SignalEventDefinition;
 import org.flowable.bpmn.model.TimerEventDefinition;
 import org.flowable.bpmn.model.Transaction;
+import org.flowable.bpmn.model.VariableListenerEventDefinition;
 import org.flowable.validation.ValidationError;
 import org.flowable.validation.validator.Problems;
 import org.flowable.validation.validator.ProcessLevelValidator;
@@ -55,11 +60,17 @@ public class BoundaryEventValidator extends ProcessLevelValidator {
             if (boundaryEvent.getEventDefinitions() != null && !boundaryEvent.getEventDefinitions().isEmpty()) {
 
                 EventDefinition eventDefinition = boundaryEvent.getEventDefinitions().get(0);
-                if (!(eventDefinition instanceof TimerEventDefinition) && !(eventDefinition instanceof ErrorEventDefinition) && !(eventDefinition instanceof SignalEventDefinition)
-                        && !(eventDefinition instanceof CancelEventDefinition) && !(eventDefinition instanceof MessageEventDefinition) && !(eventDefinition instanceof CompensateEventDefinition)) {
-
-                    addError(errors, Problems.BOUNDARY_EVENT_INVALID_EVENT_DEFINITION, process, boundaryEvent, "Invalid or unsupported event definition");
-
+                if (!(eventDefinition instanceof TimerEventDefinition) && 
+                        !(eventDefinition instanceof ErrorEventDefinition) && 
+                        !(eventDefinition instanceof SignalEventDefinition) && 
+                        !(eventDefinition instanceof CancelEventDefinition) && 
+                        !(eventDefinition instanceof MessageEventDefinition) && 
+                        !(eventDefinition instanceof ConditionalEventDefinition) && 
+                        !(eventDefinition instanceof CompensateEventDefinition) && 
+                        !(eventDefinition instanceof EscalationEventDefinition) &&
+                        !(eventDefinition instanceof VariableListenerEventDefinition)) {
+                    
+                    addError(errors, Problems.BOUNDARY_EVENT_INVALID_EVENT_DEFINITION, process, boundaryEvent, eventDefinition, "Invalid or unsupported event definition");
                 }
 
                 if (eventDefinition instanceof CancelEventDefinition) {
@@ -69,22 +80,21 @@ public class BoundaryEventValidator extends ProcessLevelValidator {
                         addError(errors, Problems.BOUNDARY_EVENT_CANCEL_ONLY_ON_TRANSACTION, process, boundaryEvent, "boundary event with cancelEventDefinition only supported on transaction subprocesses");
                     } else {
                         if (!cancelBoundaryEventsCounts.containsKey(attachedToFlowElement.getId())) {
-                            cancelBoundaryEventsCounts.put(attachedToFlowElement.getId(), new Integer(0));
+                            cancelBoundaryEventsCounts.put(attachedToFlowElement.getId(), Integer.valueOf(0));
                         }
-                        cancelBoundaryEventsCounts.put(attachedToFlowElement.getId(), new Integer(cancelBoundaryEventsCounts.get(attachedToFlowElement.getId()) + 1));
+                        cancelBoundaryEventsCounts.put(attachedToFlowElement.getId(), Integer.valueOf(cancelBoundaryEventsCounts.get(attachedToFlowElement.getId()) + 1));
                     }
 
                 } else if (eventDefinition instanceof CompensateEventDefinition) {
 
                     if (!compensateBoundaryEventsCounts.containsKey(boundaryEvent.getAttachedToRefId())) {
-                        compensateBoundaryEventsCounts.put(boundaryEvent.getAttachedToRefId(), new Integer(0));
+                        compensateBoundaryEventsCounts.put(boundaryEvent.getAttachedToRefId(), Integer.valueOf(0));
                     }
                     compensateBoundaryEventsCounts.put(boundaryEvent.getAttachedToRefId(), compensateBoundaryEventsCounts.get(boundaryEvent.getAttachedToRefId()) + 1);
 
                 } else if (eventDefinition instanceof MessageEventDefinition) {
 
-                    // Check if other message boundary events with same message
-                    // id
+                    // Check if other message boundary events with same message id
                     for (int j = 0; j < boundaryEvents.size(); j++) {
                         if (j != i) {
                             BoundaryEvent otherBoundaryEvent = boundaryEvents.get(j);
@@ -108,8 +118,18 @@ public class BoundaryEventValidator extends ProcessLevelValidator {
 
             } else {
 
-                addError(errors, Problems.BOUNDARY_EVENT_NO_EVENT_DEFINITION, process, boundaryEvent, "Event definition is missing from boundary event");
+                boolean isEventRegistryBoundaryEvent = false;
+                List<ExtensionElement> eventTypeExtensionElements = boundaryEvent.getExtensionElements().get("eventType");
+                if (eventTypeExtensionElements != null && !eventTypeExtensionElements.isEmpty()) {
+                    String eventTypeValue = eventTypeExtensionElements.get(0).getElementText();
+                    if (StringUtils.isNotEmpty(eventTypeValue)) {
+                        isEventRegistryBoundaryEvent = true;
+                    }
+                }
 
+                if (!isEventRegistryBoundaryEvent) {
+                    addError(errors, Problems.BOUNDARY_EVENT_NO_EVENT_DEFINITION, process, boundaryEvent, "Event definition is missing from boundary event");
+                }
             }
         }
 
