@@ -12,16 +12,19 @@
  */
 package org.flowable.rest.service;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.fail;
+
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
+import java.io.UncheckedIOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Map;
 import java.util.Timer;
 import java.util.TimerTask;
 import java.util.concurrent.Callable;
@@ -33,7 +36,6 @@ import org.apache.http.HttpResponse;
 import org.apache.http.HttpStatus;
 import org.apache.http.auth.AuthScope;
 import org.apache.http.auth.UsernamePasswordCredentials;
-import org.apache.http.client.ClientProtocolException;
 import org.apache.http.client.CredentialsProvider;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpGet;
@@ -45,22 +47,24 @@ import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClientBuilder;
 import org.apache.http.message.BasicHeader;
 import org.eclipse.jetty.server.Server;
+import org.flowable.common.engine.api.FlowableException;
+import org.flowable.common.engine.impl.db.SchemaManager;
+import org.flowable.common.engine.impl.identity.Authentication;
+import org.flowable.common.engine.impl.interceptor.Command;
+import org.flowable.common.engine.impl.interceptor.CommandContext;
+import org.flowable.common.engine.impl.test.EnsureCleanDbUtils;
+import org.flowable.common.rest.util.RestUrlBuilder;
+import org.flowable.engine.DynamicBpmnService;
 import org.flowable.engine.FormService;
 import org.flowable.engine.HistoryService;
 import org.flowable.engine.IdentityService;
 import org.flowable.engine.ManagementService;
 import org.flowable.engine.ProcessEngine;
+import org.flowable.engine.ProcessMigrationService;
 import org.flowable.engine.RepositoryService;
 import org.flowable.engine.RuntimeService;
 import org.flowable.engine.TaskService;
-import org.flowable.engine.common.api.FlowableException;
-import org.flowable.engine.common.impl.db.DbSchemaManager;
-import org.flowable.engine.common.impl.interceptor.Command;
-import org.flowable.engine.common.impl.interceptor.CommandContext;
-import org.flowable.engine.common.impl.interceptor.CommandExecutor;
-import org.flowable.engine.impl.ProcessEngineImpl;
 import org.flowable.engine.impl.cfg.ProcessEngineConfigurationImpl;
-import org.flowable.engine.impl.test.AbstractTestCase;
 import org.flowable.engine.impl.test.TestHelper;
 import org.flowable.engine.impl.util.CommandContextUtil;
 import org.flowable.engine.runtime.ProcessInstance;
@@ -68,15 +72,18 @@ import org.flowable.idm.api.Group;
 import org.flowable.idm.api.User;
 import org.flowable.job.service.impl.asyncexecutor.AsyncExecutor;
 import org.flowable.rest.conf.ApplicationConfiguration;
-import org.flowable.rest.service.api.RestUrlBuilder;
 import org.flowable.rest.util.TestServerUtil;
 import org.flowable.rest.util.TestServerUtil.TestServer;
+import org.joda.time.DateTime;
 import org.joda.time.format.DateTimeFormatter;
 import org.joda.time.format.ISODateTimeFormat;
-import org.junit.Assert;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Rule;
+import org.junit.rules.TestName;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.context.ApplicationContext;
+import org.springframework.web.context.support.AnnotationConfigWebApplicationContext;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -84,51 +91,77 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.fasterxml.jackson.databind.util.ISO8601DateFormat;
 
-import junit.framework.AssertionFailedError;
-
-public class BaseSpringRestTestCase extends AbstractTestCase {
+public class BaseSpringRestTestCase {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(BaseSpringRestTestCase.class);
-
+    
     protected static final List<String> TABLENAMES_EXCLUDED_FROM_DB_CLEAN_CHECK = Arrays.asList(
             "ACT_GE_PROPERTY",
-            "ACT_ID_PROPERTY");
-
-    protected static String SERVER_URL_PREFIX;
+            "ACT_ID_PROPERTY",
+            "ACT_FO_DATABASECHANGELOG",
+            "ACT_FO_DATABASECHANGELOGLOCK",
+            "FLW_EV_DATABASECHANGELOG",
+            "FLW_EV_DATABASECHANGELOGLOCK"
+    );
+    
+    @Rule 
+    public TestName testName = new TestName();
+    
+    protected static String SERVER_URL_PREFIX = "";
     protected static RestUrlBuilder URL_BUILDER;
 
-    protected static Server server;
-    protected static ApplicationContext appContext;
     protected ObjectMapper objectMapper = new ObjectMapper();
-
-    protected static ProcessEngine processEngine;
 
     protected String deploymentId;
     protected Throwable exception;
 
-    protected static ProcessEngineConfigurationImpl processEngineConfiguration;
-    protected static RepositoryService repositoryService;
-    protected static RuntimeService runtimeService;
-    protected static TaskService taskService;
-    protected static FormService formService;
-    protected static HistoryService historyService;
-    protected static IdentityService identityService;
-    protected static ManagementService managementService;
+    protected static ProcessEngine processEngine;
+    protected ProcessEngineConfigurationImpl processEngineConfiguration;
+    protected RepositoryService repositoryService;
+    protected RuntimeService runtimeService;
+    protected TaskService taskService;
+    protected FormService formService;
+    protected HistoryService historyService;
+    protected IdentityService identityService;
+    protected ManagementService managementService;
+    protected DynamicBpmnService dynamicBpmnService;
+    protected ProcessMigrationService processInstanceMigrationService;
 
     protected static CloseableHttpClient client;
     protected static LinkedList<CloseableHttpResponse> httpResponses = new LinkedList<>();
 
     protected ISO8601DateFormat dateFormat = new ISO8601DateFormat();
-
-    static {
-
-        TestServer testServer = TestServerUtil.createAndStartServer(ApplicationConfiguration.class);
-        server = testServer.getServer();
-        appContext = testServer.getApplicationContext();
-        SERVER_URL_PREFIX = testServer.getServerUrlPrefix();
-        URL_BUILDER = RestUrlBuilder.usingBaseUrl(SERVER_URL_PREFIX);
-
-        // Lookup services
+    
+    protected static Server server;
+    
+    protected static Class<?> configurationClass;
+    protected static AnnotationConfigWebApplicationContext appContext;
+    
+    @Before
+    public void init() throws Exception {
+        
+        if (configurationClass != null && !configurationClass.equals(getConfigurationClass())) {
+            if (appContext != null) {
+                appContext.close();
+            }
+            if (server != null && server.isRunning()) {
+                try {
+                    server.stop();
+                    server = null;
+                } catch (Exception e) {
+                    LOGGER.error("Error stopping server", e);
+                    throw e;
+                }
+            }
+        }
+        
+        if (configurationClass == null || appContext == null || !configurationClass.equals(getConfigurationClass())) {
+            appContext = new AnnotationConfigWebApplicationContext();
+            appContext.register(getConfigurationClass());
+            appContext.refresh();
+            configurationClass = getConfigurationClass();
+        }
+        
         processEngine = appContext.getBean("processEngine", ProcessEngine.class);
         processEngineConfiguration = appContext.getBean(ProcessEngineConfigurationImpl.class);
         repositoryService = appContext.getBean(RepositoryService.class);
@@ -138,8 +171,33 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
         historyService = appContext.getBean(HistoryService.class);
         identityService = appContext.getBean(IdentityService.class);
         managementService = appContext.getBean(ManagementService.class);
+        dynamicBpmnService = appContext.getBean(DynamicBpmnService.class);
+        processInstanceMigrationService = appContext.getBean(ProcessMigrationService.class);
+        
+        if (server == null) {
+            TestServer testServer = TestServerUtil.createAndStartServer(appContext);
+            server = testServer.getServer();
+            SERVER_URL_PREFIX = testServer.getServerUrlPrefix();
+            URL_BUILDER = RestUrlBuilder.usingBaseUrl(SERVER_URL_PREFIX);
+        }
+        
+        createHttpClient();
+        createUsers();
+        
+        deploymentId = TestHelper.annotationDeploymentSetUp(processEngine, getClass(), testName.getMethodName());
+    }
+    
+    protected Class<?> getConfigurationClass() {
+        return ApplicationConfiguration.class;
+    }
 
-        // Create http client for all tests
+    protected void createHttpClient() {
+        
+        if (client != null) {
+            return;
+        }
+        
+        // Create Http client for all tests
         CredentialsProvider provider = new BasicCredentialsProvider();
         UsernamePasswordCredentials credentials = new UsernamePasswordCredentials("kermit", "kermit");
         provider.setCredentials(AuthScope.ANY, credentials);
@@ -150,7 +208,6 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
 
             @Override
             public void run() {
-
                 if (client != null) {
                     try {
                         client.close();
@@ -158,7 +215,6 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
                         LOGGER.error("Could not close http client", e);
                     }
                 }
-
                 if (server != null && server.isRunning()) {
                     try {
                         server.stop();
@@ -169,37 +225,34 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
             }
         });
     }
-
-    @Override
-    public void runBare() throws Throwable {
-        createUsers();
-
+    
+    @After
+    public void cleanup() throws Throwable {
         try {
+            TestHelper.annotationDeploymentTearDown(processEngine, deploymentId, getClass(), testName.getMethodName());
 
-            deploymentId = TestHelper.annotationDeploymentSetUp(processEngine, getClass(), getName());
-
-            super.runBare();
-
-        } catch (AssertionFailedError e) {
-            LOGGER.error(EMPTY_LINE);
+        } catch (AssertionError e) {
+            LOGGER.error(System.lineSeparator());
             LOGGER.error("ASSERTION FAILED: {}", e, e);
             exception = e;
             throw e;
 
         } catch (Throwable e) {
-            LOGGER.error(EMPTY_LINE);
+            LOGGER.error(System.lineSeparator());
             LOGGER.error("EXCEPTION: {}", e, e);
             exception = e;
             throw e;
 
         } finally {
-            TestHelper.annotationDeploymentTearDown(processEngine, deploymentId, getClass(), getName());
+            Authentication.setAuthenticatedUserId(null);
+            TestHelper.annotationDeploymentTearDown(processEngine, deploymentId, getClass(), testName.getMethodName());
             dropUsers();
             assertAndEnsureCleanDb();
             processEngineConfiguration.getClock().reset();
             closeHttpConnections();
         }
     }
+
 
     protected void createUsers() {
         User user = identityService.newUser("kermit");
@@ -211,8 +264,20 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
         Group group = identityService.newGroup("admin");
         group.setName("Administrators");
         identityService.saveGroup(group);
-
+        
         identityService.createMembership(user.getId(), group.getId());
+        
+        user = identityService.newUser("aSalesUser");
+        user.setFirstName("Sales");
+        user.setLastName("User");
+        user.setPassword("sales");
+        identityService.saveUser(user);
+        
+        Group salesGroup = identityService.newGroup("sales");
+        salesGroup.setName("Administrators");
+        identityService.saveGroup(salesGroup);
+        
+        identityService.createMembership(user.getId(), salesGroup.getId());
     }
 
     /**
@@ -226,6 +291,10 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
      * IMPORTANT: calling method is responsible for calling close() on returned {@link HttpResponse} to free the connection.
      */
     public CloseableHttpResponse executeBinaryRequest(HttpUriRequest request, int expectedStatusCode) {
+        try {
+            Thread.sleep(1000);
+        } catch (InterruptedException e) {
+        }
         return internalExecuteRequest(request, expectedStatusCode, false);
     }
 
@@ -237,32 +306,38 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
                 request.addHeader(new BasicHeader(HttpHeaders.CONTENT_TYPE, "application/json"));
             }
             response = client.execute(request);
-            Assert.assertNotNull(response.getStatusLine());
+            assertThat(response.getStatusLine()).isNotNull();
 
             int responseStatusCode = response.getStatusLine().getStatusCode();
             if (expectedStatusCode != responseStatusCode) {
                 LOGGER.info("Wrong status code : {}, but should be {}", responseStatusCode, expectedStatusCode);
-                LOGGER.info("Response body: {}", IOUtils.toString(response.getEntity().getContent()));
+                if (response.getEntity() != null && response.getEntity().getContent() != null) {
+                    LOGGER.info("Response body: {}", IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8));
+                }
             }
 
-            Assert.assertEquals(expectedStatusCode, responseStatusCode);
+            assertThat(responseStatusCode).isEqualTo(expectedStatusCode);
             httpResponses.add(response);
             return response;
 
-        } catch (ClientProtocolException e) {
-            Assert.fail(e.getMessage());
         } catch (IOException e) {
-            Assert.fail(e.getMessage());
+            throw new UncheckedIOException(e);
         }
-        return null;
     }
 
+    public JsonNode readContent(CloseableHttpResponse response) {
+        try {
+            return objectMapper.readTree(response.getEntity().getContent());
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
+    }
     public void closeResponse(CloseableHttpResponse response) {
         if (response != null) {
             try {
                 response.close();
             } catch (IOException e) {
-                fail("Could not close http connection");
+                fail("Could not close http connection", e);
             }
         }
     }
@@ -273,6 +348,10 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
         identityService.deleteUser("kermit");
         identityService.deleteGroup("admin");
         identityService.deleteMembership("kermit", "admin");
+        
+        identityService.deleteUser("aSalesUser");
+        identityService.deleteGroup("sales");
+        identityService.deleteMembership("aSalesUser", "sales");
     }
 
     /**
@@ -280,44 +359,22 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
      * the DB is not clean. If the DB is not clean, it is cleaned by performing a create a drop.
      */
     protected void assertAndEnsureCleanDb() throws Throwable {
-        LOGGER.debug("verifying that db is clean after test");
-        Map<String, Long> tableCounts = managementService.getTableCount();
-        StringBuilder outputMessage = new StringBuilder();
-        for (String tableName : tableCounts.keySet()) {
-            String tableNameWithoutPrefix = tableName.replace(processEngineConfiguration.getDatabaseTablePrefix(), "");
-            if (!TABLENAMES_EXCLUDED_FROM_DB_CLEAN_CHECK.contains(tableNameWithoutPrefix)) {
-                Long count = tableCounts.get(tableName);
-                if (count != 0L) {
-                    outputMessage.append("  ").append(tableName).append(": ").append(count.toString()).append(" record(s) ");
+        EnsureCleanDbUtils.assertAndEnsureCleanDb(
+                "",
+                LOGGER,
+                processEngineConfiguration,
+                TABLENAMES_EXCLUDED_FROM_DB_CLEAN_CHECK,
+                exception == null,
+                new Command<Void>() {
+                    @Override
+                    public Void execute(CommandContext commandContext) {
+                        SchemaManager schemaManager = CommandContextUtil.getProcessEngineConfiguration(commandContext).getSchemaManager();
+                        schemaManager.schemaDrop();
+                        schemaManager.schemaCreate();
+                        return null;
+                    }
                 }
-            }
-        }
-        if (outputMessage.length() > 0) {
-            outputMessage.insert(0, "DB NOT CLEAN: \n");
-            LOGGER.error(EMPTY_LINE);
-            LOGGER.error(outputMessage.toString());
-
-            LOGGER.info("dropping and recreating db");
-
-            CommandExecutor commandExecutor = ((ProcessEngineImpl) processEngine).getProcessEngineConfiguration().getCommandExecutor();
-            commandExecutor.execute(new Command<Object>() {
-                @Override
-                public Object execute(CommandContext commandContext) {
-                    DbSchemaManager dbSchemaManager = CommandContextUtil.getProcessEngineConfiguration(commandContext).getDbSchemaManager();
-                    dbSchemaManager.dbSchemaDrop();
-                    dbSchemaManager.dbSchemaCreate();
-                    return null;
-                }
-            });
-
-            if (exception != null) {
-                throw exception;
-            } else {
-                Assert.fail(outputMessage.toString());
-            }
-        } else {
-            LOGGER.info("database was clean");
-        }
+        );
     }
 
     protected void closeHttpConnections() {
@@ -335,11 +392,7 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
 
     protected String encode(String string) {
         if (string != null) {
-            try {
-                return URLEncoder.encode(string, "UTF-8");
-            } catch (UnsupportedEncodingException uee) {
-                throw new IllegalStateException("JVM does not support UTF-8 encoding.", uee);
-            }
+            return URLEncoder.encode(string, StandardCharsets.UTF_8);
         }
         return null;
     }
@@ -348,7 +401,7 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
         ProcessInstance processInstance = processEngine.getRuntimeService().createProcessInstanceQuery().processInstanceId(processInstanceId).singleResult();
 
         if (processInstance != null) {
-            throw new AssertionFailedError("Expected finished process instance '" + processInstanceId + "' but it was still in the db");
+            throw new AssertionError("Expected finished process instance '" + processInstanceId + "' but it was still in the db");
         }
     }
 
@@ -443,7 +496,7 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
         // Check status and size
         JsonNode dataNode = objectMapper.readTree(response.getEntity().getContent()).get("data");
         closeResponse(response);
-        assertEquals(numberOfResultsExpected, dataNode.size());
+        assertThat(dataNode).hasSize(numberOfResultsExpected);
 
         // Check presence of ID's
         List<String> toBeFound = new ArrayList<>(Arrays.asList(expectedResourceIds));
@@ -452,8 +505,25 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
             String id = it.next().get("id").textValue();
             toBeFound.remove(id);
         }
-        assertTrue("Not all expected ids have been found in result, missing: " + StringUtils.join(toBeFound, ", "), toBeFound.isEmpty());
+        assertThat(toBeFound).as("Not all expected ids have been found in result, missing: " + StringUtils.join(toBeFound, ", ")).isEmpty();
     }
+
+    /**
+     * Checks if the returned "data" array (child-node of root-json node returned by invoking a GET on the given url) contains entries with the given ID's.
+     */
+    protected void assertResultsExactlyPresentInDataResponse(String url, String... expectedResourceIds) throws IOException {
+        // Do the actual call
+        CloseableHttpResponse response = executeRequest(new HttpGet(SERVER_URL_PREFIX + url), HttpStatus.SC_OK);
+
+        // Check status and size
+        JsonNode dataNode = objectMapper.readTree(response.getEntity().getContent()).get("data");
+        closeResponse(response);
+        assertThat(dataNode)
+            .extracting(node -> node.get("id").textValue())
+            .as("Expected result ids")
+            .containsExactly(expectedResourceIds);
+    }
+
 
     protected void assertEmptyResultsPresentInDataResponse(String url) throws JsonProcessingException, IOException {
         // Do the actual call
@@ -462,7 +532,7 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
         // Check status and size
         JsonNode dataNode = objectMapper.readTree(response.getEntity().getContent()).get("data");
         closeResponse(response);
-        assertEquals(0, dataNode.size());
+        assertThat(dataNode).isEmpty();
     }
 
     /**
@@ -487,7 +557,7 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
             // Check status and size
             JsonNode rootNode = objectMapper.readTree(response.getEntity().getContent());
             JsonNode dataNode = rootNode.get("data");
-            assertEquals(numberOfResultsExpected, dataNode.size());
+            assertThat(dataNode).hasSize(numberOfResultsExpected);
 
             // Check presence of ID's
             if (expectedResourceIds != null) {
@@ -497,7 +567,7 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
                     String id = it.next().get("id").textValue();
                     toBeFound.remove(id);
                 }
-                assertTrue("Not all entries have been found in result, missing: " + StringUtils.join(toBeFound, ", "), toBeFound.isEmpty());
+                assertThat(toBeFound).as("Not all entries have been found in result, missing: " + StringUtils.join(toBeFound, ", ")).isEmpty();
             }
         }
 
@@ -530,6 +600,13 @@ public class BaseSpringRestTestCase extends AbstractTestCase {
 
     protected String getISODateString(Date time) {
         return dateFormat.format(time);
+    }
+
+    protected String getISODateStringWithTZ(Date date) {
+        if (date == null) {
+            return null;
+        }
+        return ISODateTimeFormat.dateTime().print(new DateTime(date));
     }
 
     protected String buildUrl(String[] fragments, Object... arguments) {
